--- a/week2/ProgrammingAssignment2/ProgrammingAssignment2/ProgrammingAssignment2.csproj
+++ b/week2/ProgrammingAssignment2/ProgrammingAssignment2/ProgrammingAssignment2.csproj
@@ -1,20 +1,20 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
-    <ProjectGuid>{0FD37DCF-E7DD-4323-90BB-B9148719AA53}</ProjectGuid>
+    <ProjectGuid>{23718491-541C-4A90-960A-AB15F3B10C7C}</ProjectGuid>
     <ProjectTypeGuids>{6D335F3A-9D43-41b4-9D22-F6F17C4BE596};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">x86</Platform>
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Lab5</RootNamespace>
-    <AssemblyName>Lab5</AssemblyName>
+    <RootNamespace>ProgrammingAssignment2</RootNamespace>
+    <AssemblyName>ProgrammingAssignment2</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <TargetFrameworkProfile>Client</TargetFrameworkProfile>
     <XnaFrameworkVersion>v4.0</XnaFrameworkVersion>
     <XnaPlatform>Windows</XnaPlatform>
     <XnaProfile>Reach</XnaProfile>
-    <XnaCrossPlatformGroupID>2176b5f5-206a-40e1-a157-fcc1c1b63c60</XnaCrossPlatformGroupID>
+    <XnaCrossPlatformGroupID>9b1a4d9f-a2e8-4a74-a133-f55e9fe28ce4</XnaCrossPlatformGroupID>
     <XnaOutputType>Game</XnaOutputType>
     <ApplicationIcon>Game.ico</ApplicationIcon>
     <Thumbnail>GameThumbnail.png</Thumbnail>
@@ -83,8 +83,8 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Lab5Content\Lab5Content.contentproj">
-      <Name>Lab5Content</Name>
+    <ProjectReference Include="..\ProgrammingAssignment2Content\ProgrammingAssignment2Content.contentproj">
+      <Name>ProgrammingAssignment2Content</Name>
       <XnaReferenceType>Content</XnaReferenceType>
     </ProjectReference>
   </ItemGroup>
